[project]
name = "tf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gapminder>=0.1",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "kaggle>=2.0.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "plotly>=6.6.0",
    "pyarrow>=23.0.0",
    "pyreadstat>=1.3.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "setuptools<82",
    "siuba>=0.4.2",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.2.0",
]


